deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oldschool
spec:
  template:
    spec:
      containers:
        - name: app
          image: slamdev/oldschool
          ports:
            - name: http
              containerPort: 8080
            - name: http-management
              containerPort: 8081
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /actuator/health
              port: http-management
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http-management
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http-management
