deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oldschool
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: http-management
      port: 8081
      targetPort: http-management
